# movies_netguru_assignment

./: .gitignore  README.md  setup.cfg
src/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh  initial_data.json  pyproject.toml  requirements.txt
src/movie_library/config/: settings.py  urls.py  yasg.py
src/movie_library/movies/: models.py  serializers.py  services.py  urls.py  views.py
src/movies/config/: settings.py  urls.py  yasg.py
src/movies/movies/: models.py
