[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["RezuanDzibov <rezuan.dzbov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.3.0"
cognitive-complexity = "^1.2.0"
flake8-alphabetize = "^0.0.17"
flake8-annotations = "^2.9.0"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.4.25"
flake8-builtins = "^1.5.3"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.9.0"
flake8-polyfill = "^1.0.2"
flake8-variables-names = "^0.0.5"
flake8 = "^4.0.1"
pep8-naming = "^0.12.1"
pyflakes = "^2.4.0"
Django = "^4.0.4"
django-rest-framework = "^0.1.0"
python-dotenv = "^0.20.0"
drf-yasg = "^1.20.0"
django-extensions = "^3.1.5"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
